[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-indoor-sun"
version = "0.1.0"
dependencies = ["pillow>=10.3.0"]
authors = [
    { name="lnxd" }
]

[tool.setuptools]
packages = ["custom_components.hass-indoor-sun"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

# Ignore missing imports for Home Assistant modules
[[tool.mypy.overrides]]
module = ["homeassistant.*"]
ignore_missing_imports = true

# Ignore missing imports for async_timeout (older version compatibility)
[[tool.mypy.overrides]]
module = ["async_timeout"]
ignore_missing_imports = true

# Ignore missing imports for PIL (use types-Pillow instead)
[[tool.mypy.overrides]]
module = ["PIL.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I"]
exclude = ["custom_components/*/manifest.json"] 